@@ -80,7 +80,7 @@ int main(int, char *[])
     KrigingResult result(algo.getResult());
     Function metaModel(result.getMetaModel());
     assert_almost_equal(result.getConditionalMarginalVariance(inputSample),
-                        Point(inputSample.getSize(), 0.), 1e-14, 1e-14);
+                        Sample(inputSample.getSize(), 1), 1e-14, 1e-14);
 
 
     // Consistency check: does the reimplementation fit the SquaredExponential class?
