@@ -56,7 +56,7 @@ def test_one_input_one_output():
 
     # Variance per marginal
     var = result.getConditionalMarginalVariance(X)
-    ott.assert_almost_equal(var, ot.Point(sampleSize), 0.0, 1e-1)
+    ott.assert_almost_equal(var, ot.Sample(sampleSize, 1), 0.0, 1e-1)
 
 
 # Test 2
@@ -113,7 +113,7 @@ def test_two_inputs_one_output():
 
     # Variance per marginal
     var = result.getConditionalMarginalVariance(inputSample)
-    ott.assert_almost_equal(var, ot.Point(len(inputSample)), 0.0, 1e-3)
+    ott.assert_almost_equal(var, ot.Sample(inputSample.getSize(), 1), 0.0, 1e-3)
     # Estimation
     ott.assert_almost_equal(outputValidSample,  metaModel(
         inputValidSample), 1.e-1, 1e-1)
@@ -130,7 +130,7 @@ def test_stationary_fun():
     algo.run()
     result = algo.getResult()
     variance = result.getConditionalMarginalVariance(x)
-    ott.assert_almost_equal(variance, ot.Point(len(x), 0.), 2e-6, 2e-6)
+    ott.assert_almost_equal(variance, ot.Sample(len(x), 1), 2e-6, 2e-6)
 
 if __name__ == "__main__":
     test_one_input_one_output()
