@@ -25,6 +25,7 @@
  * Deprecated MultiFORM.setMaximumNumberOfDesignPoints/getMaximumNumberOfDesignPoints
  * Deprecated SubsetSampling.getNumberOfSteps
  * Normal and Student distributions: no need to specify the R parameter if it is the identity matrix
+ * KrigingResult::getConditionalMean and getConditionalMarginalVariance yield Samples instead of Points when applied to Samples
 
 === Documentation ===
 
